--- a/.environment
+++ b/.environment
@@ -41,6 +41,6 @@ export PSH_FIRSTTEAM_NAME=team-admin
 export PSH_FIRSTTEAM_DISPLAYNAME=team-admin
 export PSH_FIRSTCHANNEL_NAME=setup
 export PSH_FIRSTCHANNEL_DISPLAYNAME=Setup
-export PSH_WELCOME_MESSAGE="Congrats @admin! You have successfully deployed your own Mattermost server on Platform.sh!"
-export PSH_WARNING_MESSAGE1="**WARNING:** This instance has been setup with a default System Admin user credentials to make setup as smooth as possible."
-export PSH_WARNING_MESSAGE2="**WARNING:** Go to your **Account Settings** in the top right of the toolbar and update these credentials immediately."
+export PSH_WELCOME_MESSAGE="Congrats @admin! You have successfully deployed your own Mattermost server on Upsun!"
+export PSH_WARNING_MESSAGE1="**WARNING:** A randomly generated password was created for this System Admin account. Retrieve it by running: \`cat /app/.config/admin_credentials\`"
+export PSH_WARNING_MESSAGE2="**WARNING:** Once logged in, go to **Account Settings** in the top right of the toolbar and update your credentials immediately."
